--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@fontsource/open-sans": "^4.5.11",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
